Fix post-tag spacing

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -124,6 +124,10 @@ body {
   p {
     margin: 0 10px 0 0;
   }
+
+  li {
+    padding-right: 10px;
+  }
 }
 .data-tags {
   tab-size: 5;
